--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.19",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-local-storage": "^0.1.3",
+    "vue-reactive-storage": "git+https://github.com/ropbla9/vue-reactive-storage.git",
+    "vue-reactive-storages": "^1.0.14",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
