Started vTodo App

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "loadash": "^1.0.0",
     "lodash": "^4.17.19",
+    "moment-timezone": "^0.5.31",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-local-storage": "^0.1.3",
