--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-local-storage": "^0.1.3",
+    "vue-moment": "^4.1.0",
     "vue-reactive-storage": "git+https://github.com/ropbla9/vue-reactive-storage.git",
     "vue-reactive-storages": "^1.0.14",
     "vue-router": "^3.2.0",
